[gd_scene load_steps=47 format=3 uid="uid://cgj026qw64qmc"]

[ext_resource type="Script" uid="uid://s1nvp4asepl" path="res://main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b0vhrmhwqui45" path="res://asset/asset/kloofendal_38d_partly_cloudy_puresky_2k.png" id="2_ok6jj"]
[ext_resource type="Texture2D" uid="uid://brd525fwvqhi7" path="res://asset/ground049_ncr.png" id="3"]
[ext_resource type="Texture2D" uid="uid://deycuors1vpfg" path="res://asset/ground054_ncr.png" id="4"]
[ext_resource type="Texture2D" uid="uid://i4rlnf76v8xo" path="res://asset/scatter_leave.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dvqa7waupojkw" path="res://asset/Rock035_nc.jpg" id="6"]
[ext_resource type="Texture2D" uid="uid://thp4loyw4gay" path="res://asset/rock_grid_normalmap.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bfmo8uk68ewd0" path="res://asset/rocks_grid_albedo.png" id="8"]
[ext_resource type="Shader" uid="uid://u3rn422xmr37" path="res://terrain.gdshader" id="9"]
[ext_resource type="Script" uid="uid://ngutk3qqod6" path="res://MTerrain.gd" id="10"]
[ext_resource type="MGrassData" uid="uid://dfof48bptiiug" path="res://gdata/green_grass_data.res" id="11"]
[ext_resource type="MGrassLodSetting" uid="uid://b853pcy4wub5j" path="res://lod_setting/green_grass/lod0.tres" id="12"]
[ext_resource type="MGrassLodSetting" uid="uid://dfeaua3ixb81l" path="res://lod_setting/green_grass/lod2.tres" id="13"]
[ext_resource type="MGrassLodSetting" uid="uid://dt75ba8ct0ysv" path="res://lod_setting/green_grass/lod3.tres" id="14"]
[ext_resource type="ArrayMesh" uid="uid://bvys7ml4y2tny" path="res://meshes/grass/grass_lod1.res" id="15"]
[ext_resource type="ArrayMesh" uid="uid://cb1d57is2krb4" path="res://meshes/grass/grass_lod2.res" id="16"]
[ext_resource type="MGrassData" uid="uid://b1ol4se2ebrsi" path="res://gdata/tree.res" id="17"]
[ext_resource type="Shape3D" uid="uid://din8gp0heexwi" path="res://meshes/tree/tree_collision.shape" id="18"]
[ext_resource type="MGrassLodSetting" uid="uid://bnbjwxirqd7cw" path="res://lod_setting/tree/tree_lod0.tres" id="19"]
[ext_resource type="MGrassLodSetting" uid="uid://h35dk8rjxfxo" path="res://lod_setting/tree/tree_lod2.tres" id="20"]
[ext_resource type="ArrayMesh" uid="uid://b6dlcxlm6kt3q" path="res://meshes/tree/tree_lod0.res" id="21"]
[ext_resource type="ArrayMesh" uid="uid://bgq8anad4u010" path="res://meshes/tree/tree_lod1.res" id="22"]
[ext_resource type="ArrayMesh" uid="uid://1yp402ws07mq" path="res://meshes/tree/tree_lod2.res" id="23"]
[ext_resource type="MGrassData" uid="uid://bfjnnvhvcnmsp" path="res://gdata/big_rock.res" id="24"]
[ext_resource type="Shape3D" uid="uid://br2ncvs2bjvk" path="res://meshes/big_rocks/big_rock.shape" id="25"]
[ext_resource type="MGrassLodSetting" uid="uid://bma5th22qsyat" path="res://lod_setting/big_rock.tres" id="26"]
[ext_resource type="ArrayMesh" uid="uid://qqxwrfrnho5n" path="res://meshes/big_rocks/big_rocks_lod0.res" id="27"]
[ext_resource type="ArrayMesh" uid="uid://brtk0bltj2afp" path="res://meshes/big_rocks/big_rocks_lod2.res" id="28"]
[ext_resource type="MGrassData" uid="uid://ufh8ta4ete3f" path="res://gdata/small_rocks.res" id="29"]
[ext_resource type="MGrassLodSetting" uid="uid://dx01srhck8s1y" path="res://lod_setting/small_rocks.tres" id="30"]
[ext_resource type="ArrayMesh" uid="uid://c633c63aq3lvn" path="res://meshes/small_rocks/small_rock_lod0.res" id="31"]
[ext_resource type="MGrassData" uid="uid://b5dwet4akfnhj" path="res://gdata/fog.res" id="32"]
[ext_resource type="MGrassLodSetting" uid="uid://dwhu24e6883t3" path="res://lod_setting/fog/fog0.tres" id="33"]
[ext_resource type="QuadMesh" uid="uid://cib4713y46vmy" path="res://meshes/fog_mesh.res" id="34"]
[ext_resource type="PackedScene" uid="uid://c0vnqt6uyxaoa" path="res://player/Player.tscn" id="35_0rl1p"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_lmmx3"]
panorama = ExtResource("2_ok6jj")

[sub_resource type="Sky" id="Sky_ga1x5"]
sky_material = SubResource("PanoramaSkyMaterial_lmmx3")

[sub_resource type="Environment" id="Environment_p8haf"]
background_mode = 2
sky = SubResource("Sky_ga1x5")
ambient_light_sky_contribution = 0.1
tonemap_mode = 2
sdfgi_min_cell_size = 0.274219
sdfgi_cascade0_distance = 17.55
sdfgi_max_distance = 280.8
fog_enabled = true
fog_density = 0.002
fog_sky_affect = 0.77
adjustment_enabled = true
adjustment_brightness = 0.9
adjustment_contrast = 1.1
adjustment_saturation = 1.5

[sub_resource type="FastNoiseLite" id="FastNoiseLite_y85lr"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_x80ud"]
seamless = true
noise = SubResource("FastNoiseLite_y85lr")

[sub_resource type="MTerrainMaterial" id="MTerrainMaterial_ohep1"]
shader = ExtResource("9")
_uniforms = {
-1: {
"ground_tex0": ExtResource("3"),
"ground_tex1": ExtResource("4"),
"leaves_tex": ExtResource("5"),
"noise_tex": SubResource("NoiseTexture2D_x80ud"),
"rock_tex0": ExtResource("6"),
"rocks_normalmap": ExtResource("7"),
"rocks_tex": ExtResource("8")
}
}

[sub_resource type="MMeshLod" id="MMeshLod_vq777"]
meshes = Array[Mesh]([ExtResource("15"), ExtResource("16"), null, null, null, null])
lod_count = 6

[sub_resource type="MMeshLod" id="MMeshLod_hdovn"]
meshes = Array[Mesh]([ExtResource("21"), ExtResource("22"), ExtResource("23"), ExtResource("23"), ExtResource("23"), ExtResource("23")])
lod_count = 6

[sub_resource type="MMeshLod" id="MMeshLod_6c5gm"]
meshes = Array[Mesh]([ExtResource("27"), ExtResource("27"), ExtResource("28"), null, null, null])
lod_count = 6

[sub_resource type="MMeshLod" id="MMeshLod_k3ux5"]
meshes = Array[Mesh]([ExtResource("31"), null, null, null, null, null])
lod_count = 6

[sub_resource type="MMeshLod" id="MMeshLod_33fo3"]
meshes = Array[Mesh]([null, null, null, ExtResource("34"), ExtResource("34"), null])
lod_count = 6

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.88609, 0.310151, -0.344457, -0.0735, 0.827761, 0.556246, 0.457648, -0.467567, 0.756267, -3.59427, -3.15698, 0.237915)
light_energy = 3.0
shadow_enabled = true
directional_shadow_mode = 1
directional_shadow_max_distance = 150.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_p8haf")

[node name="MTerrain" type="MTerrain" parent="."]
dataDir = "res://data"
terrain_material = SubResource("MTerrainMaterial_ohep1")
heightmap_layers = PackedStringArray("background")
terrain_quad_count = Vector2i(256, 256)
region_quad_count = 32
max_quad_visible = 2000
distance_update_threshold = 16.0
offset = Vector3(-4096, 0, -4096)
lod_distance = PackedInt32Array(2, 4, 6, 7, 8)
script = ExtResource("10")

[node name="green_grass" type="MGrass" parent="MTerrain"]
grass_data = ExtResource("11")
lod_settings = [ExtResource("12"), ExtResource("13"), ExtResource("13"), ExtResource("14"), null, null]
meshes = SubResource("MMeshLod_vq777")
materials = [null, null, null, null, null, null]

[node name="tree" type="MGrass" parent="MTerrain"]
grass_data = ExtResource("17")
shape = ExtResource("18")
active_shape_resize = true
lod_settings = [ExtResource("19"), ExtResource("19"), ExtResource("20"), ExtResource("20"), ExtResource("20"), ExtResource("20")]
meshes = SubResource("MMeshLod_hdovn")
materials = [null, null, null, null, null, null]

[node name="big_rock" type="MGrass" parent="MTerrain"]
grass_data = ExtResource("24")
shape = ExtResource("25")
lod_settings = [ExtResource("26"), ExtResource("26"), ExtResource("26"), ExtResource("26"), ExtResource("26"), null]
meshes = SubResource("MMeshLod_6c5gm")
materials = [null, null, null, null, null, null]

[node name="small_rock" type="MGrass" parent="MTerrain"]
grass_data = ExtResource("29")
lod_settings = [ExtResource("30"), ExtResource("30"), null, null, null, null]
meshes = SubResource("MMeshLod_k3ux5")
materials = [null, null, null, null, null, null]

[node name="fog" type="MGrass" parent="MTerrain"]
grass_data = ExtResource("32")
lod_settings = [ExtResource("33"), ExtResource("33"), ExtResource("33"), ExtResource("33"), ExtResource("33"), ExtResource("33")]
meshes = SubResource("MMeshLod_33fo3")
materials = [null, null, null, null, null, null]

[node name="Player" parent="." instance=ExtResource("35_0rl1p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -378.51, 716.272, -286.631)

[node name="SubViewportContainer" type="CanvasLayer" parent="."]

[node name="menu" type="Button" parent="SubViewportContainer"]
offset_left = 17.0
offset_top = 11.0
offset_right = 152.0
offset_bottom = 80.0
text = "menu"

[node name="fps_label" type="Label" parent="SubViewportContainer"]
offset_left = 141.0
offset_top = -35.0
offset_right = 181.0
offset_bottom = -12.0
scale = Vector2(3, 3)
pivot_offset = Vector2(-16.935, -23.305)
text = "FPS:"

[connection signal="pressed" from="SubViewportContainer/menu" to="." method="_on_menu_pressed"]
